fix(context-menu): Fixing buttons with background on tablet

--- a/src/viewer/ToolContextMenu.css
+++ b/src/viewer/ToolContextMenu.css
@@ -24,6 +24,7 @@
   border-radius: 3px;
   outline: none;
   cursor: pointer;
+  background: none;
 }
 
 .ToolContextMenu > ul > li > button:hover {
